--- a/custom_components/hi_mark/manifest.json
+++ b/custom_components/hi_mark/manifest.json
@@ -1,9 +1,8 @@
 {
   "domain": "hi_mark",
   "name": "Hi Mark",
-  "documentation": "https://www.example.com",
-  "dependencies": [],
-  "codeowners": [],
-  "requirements": [],
+  "documentation": "https://github.com/RichardMizak/Test_Hass_Integration",
+  "codeowners": ["Richard Mižák"],
+  "issue_tracker": "https://github.com/RichardMizak/Test_Hass_Integration/issues",
   "version": 0.1
 }
